[project]
name = "pyjsaw"
description = "pyjsaw - python to javascript compiler with integrated Vue support"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["python", "webapplication", "vue", "javascript", "js"]
authors = [
  { name="Valery Kucherov", email="valq7711@gmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/valq7711/pyjsaw"
repository = "https://github.com/valq7711/pyjsaw"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include= ["pyjsaw*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "pyjsaw.__version__"}
